--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css"/>
-<title> Le titre qui apparaitra dans le navigateur </title>
+<title> Quête Github </title>
 <meta charset="UTF-8">
 </head>
 
 <body>
-<h1> Ici le titre principal </h1>
+<h1> Quête Github </h1>
 <p> Et voilà le texte de la page</p>
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
