Addition of a summary
What is Git and what is it for?

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 <body>
 <h1> Quête Github </h1>
-<p> Et voilà le texte de la page</p>
+<p> 
+Git est un système de contrôle de version
+Git t'aide à conserver l'historique de tes fichiers et à fournir des outils pour travailler en équipe sur les mêmes fichiers de manière concurrente
+Github est une plateforme en ligne qui propose des services tels que l'hébergement de code mais c'est aussi un lieu social où tu peux participer à des projets open source, partager et découvrir de nouveaux projets.
+  </p>
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
 </body> 
