Adding a youtube link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ Git est un système de contrôle de version
 Git t'aide à conserver l'historique de tes fichiers et à fournir des outils pour travailler en équipe sur les mêmes fichiers de manière concurrente
 Github est une plateforme en ligne qui propose des services tels que l'hébergement de code mais c'est aussi un lieu social où tu peux participer à des projets open source, partager et découvrir de nouveaux projets.
   </p>
-<h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
-<p> Et voici un autre paragraphe </p> 
+<h2>Premiers pas avec GitHub
+Suis cette super vidéo pour apprendre à créer un dépôt et à démarrer avec GitHub! </h2>
+<p> <a href= "https://www.youtube.com/watch?v=gp_k0UVOYMw"> LES BASES DE GIT (tuto débutant) </a>  </p> 
 </body> 
 </html>
